add map drawing and player movement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required(VERSION 3.20)
+
+# Name of the project
 project(Roguelike LANGUAGES CXX VERSION 0.1.0)
 
+# Use modern C++ features
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Build an executable from these source files
 add_executable(roguelike
     src/main.cpp
     src/Game.cpp
@@ -11,4 +15,5 @@ add_executable(roguelike
     src/Player.cpp
 )
 
+# So #include "Game.h" works
 target_include_directories(roguelike PRIVATE src)
